--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- tile -->
     <center>
         <h1>Side Runner Game!</h1>
     </center>
+
+    <!-- Game -->
     <canvas></canvas>
+
+    <!-- Game Code -->
     <script type='module' src="script.js"></script>
+
+    <!-- image loading -->
     <i class="hills"></i>
     <i class="background"></i>
     <i class="platform"></i>
+    <i class="platformSmallTall"></i>
+    <i class="spriteRunLeft"></i>
+    <i class="spriteRunRight"></i>
+    <i class="spriteStandLeft"></i>
+    <i class="spriteStandRight"></i>
 </body>
 </html>
